# EmeCom_with_Stack-Based_Agents

./: .gitignore  README.md  pyproject.toml
emecom_with_stack_based_agents/: env.py  main.py
emecom_with_stack_based_agents/analysis/: average_and_visualize.py
emecom_with_stack_based_agents/common/: baselines.py  constants.py  length.py  loss.py  tree_height.py
emecom_with_stack_based_agents/rl_spinn/: binary_branching_rl_spinn.py  left_branching_rl_spinn.py  random_branching_rl_spinn.py  right_branching_rl_spinn.py  rl_spinn.py  tracking_lstm.py
emecom_with_stack_based_agents/signaling_game/: architectures.py  game.py  trainer.py
emecom_with_stack_based_agents/signaling_game/attval/: architectures.py  data.py  loss.py
