[tool.poetry]
name = "emecom-with-stack-based-agents"
version = "0.1.0"
description = ""
authors = ["porink0424 <daichi5967@is.s.u-tokyo.ac.jp>"]
readme = "README.md"
packages = [{include = "emecom_with_stack_based_agents"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
torch = ">=2.0.0, !=2.0.1"
numpy = "^1.25.0"
isort = "^5.12.0"
matplotlib = "^3.7.2"
scipy = "^1.11.1"
editdistance = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
